# hydra-hal-cli

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cli.cpp  cli.hpp  mini_stream.hpp  shell.hpp  util.hpp
cmake/: Cmsis.cmake  Doxygen.cmake  FreeRTOS.cmake  Sanitizers.cmake  TinyUSB.cmake  UsePackage.cmake  cmsis.cmake  run_tests.cmake
cmake/modules/: UsePackage.cmake
cmake/toolchains/: cortex-m0.cmake  stm32f042x6.cmake
cmake/toolchains/common/: arm-none-eabi.cmake
config/: FreeRTOSApp.c  FreeRTOSConfig.h  tusb_config.h  usb_descriptors.c
docs/: CMakeLists.txt  config.doxygen
include/: port.hpp
include/hh/: ansi_codes.hpp  ansi_parser.hpp  cmd_history.hpp  common.hpp  concepts.hpp  fixed_string.h  gpio.hpp  hal_assert.hpp  mini_stream.hpp  shell.hpp
include/hh/peripheral/: common.hpp  gpio.hpp
include/hh/peripheral/portable/: peripheral_port.hpp
include/hh/portable/: peripheral_port.hpp
src/: ansi_codes.cpp  ansi_parser.cpp  gpio.cpp  mini_stream.cpp  shell.cpp
test/: CMakeLists.txt  cli_tests.cpp  mini_stream_tests.cpp  mock_serial.hpp  shell_tests.cpp  test_ansi_parser.cpp  test_cmd_history.cpp  test_fixed_string.cpp  test_gpio.cpp  test_main.cpp  test_mini_stream.cpp  test_shell.cpp
test/device-testing/: CMakeLists.txt  LinkerScript.ld  startup.cpp  vectors.cpp
test/device-testing/sanity-check/: CMakeLists.txt  sanity-check.cpp
test/device_testing/sanity-check/: CMakeLists.txt  sanity-check.cpp
test/mocks/: stm32f0xx.h
